# reflex-ros-pkg

./: .gitignore  .gitmodules  LICENSE.md  README.md  README.text
BrainBoard Electrical Files/: reflex_brainboard_RevG.PcbDoc  reflex_brainboard_RevG.SchDoc
electronics/beta/: reflex_beta.PcbDoc  reflex_beta.SchDoc  reflex_beta_bill_of_materials.xls
firmware/: README.md  differences.txt
firmware/SF_Encoder_Firmware/: README  flash_SF_Encoder_Firmware_old.sh  flash_SF_Encoder_Firmware_tested.sh
firmware/beta/: Makefile  async_poll.c  async_poll.h  dmxl.c  dmxl.h  enc.c  enc.h  enet.c  enet.h  fan.c  main.c  pin.c  state.c  systime.c  tactile.c  tactile.h
firmware/demo/: fingers
firmware/gdrive-reflex-firmware-master/: Makefile  async_poll.c  enc.h  fan.h  i2cFunc (beforeCleaningTimeout).c  imu (backup, no multiplexer).c  (+11 more)
reflex/: CMakeLists.txt  package.xml  setup.py
reflex-1-NoROS_api/: motor_NoROS.py  one_example_code_NoROS.py  reflex_hand_5_motors_ref1_NoROS.py  reflex_motor_information.py  reflex_one_hand_NoROS.py  reflex_one_motor_NoROS.py  reflex_one_zero_points.yaml
reflex/bagfiles/: README.md  latest_takktile_run.bag
reflex/launch/: reflex.launch  reflex_one.launch  reflex_plus.launch  reflex_sf.launch  reflex_takktile.launch  reflex_takktile2.launch  reflex_takktile_hand2.launch  reflex_takktile_two_hands.launch  reflex_takktile_wireless.launch  reflex_usb.launch
reflex/src/: IROS_Takktile1_test.py  IROS_Takktile1_v2.py  IROS_Takktile1_v3.py  demo_script_options.py  example_script.py  finger_bend_test.py  hybrid_test_script.py  one_sample_code.py  plus_example_code.py  reflex_base.py  reflex_base_services.py  reflex_smarts.py  reflex_tf_broadcaster.cpp  sf_example_code.py  takktile_example_code.py  takktile_example_code_hand2.py  takktile_example_code_two_hands.py  takktile_test.py  test_script.py  tf_broadcaster.cpp
reflex/src/reflex/: demo_script_options.py  finger.py  hybrid_test_script.py  imu.py  motor.py  motor2.py  reflex_base.py  reflex_base_services.py  reflex_hand.py  reflex_hand2.py  reflex_hand_5_motors_ref1.py  reflex_one_hand.py  reflex_one_motor.py  reflex_sf_hand.py  reflex_sf_motor.py  reflex_smarts.py  reflex_takktile2_hand.py  reflex_takktile2_motor.py  reflex_takktile_hand.py  reflex_takktile_hand2.py  reflex_takktile_motor.py  reflex_usb_hand.py  reflex_usb_motor.py  rotation_display.py  state_debug.py  takktile_node_hand1.py  takktile_node_hand2.py  test_motor.py  test_reflex_one_hand.py  test_reflex_plus_hand.py  test_reflex_takktile2_hand.py  test_reflex_takktile_hand.py
reflex/yaml/: left_hand_motor_zero_points.yaml  reflex.yaml  reflex_one.yaml  reflex_one_motor_zero_points.yaml  reflex_one_zero_points.yaml  reflex_plus.yaml  reflex_plus_encoder_zero_points.yaml  reflex_plus_motor_zero_points.yaml  reflex_sf.yaml  reflex_sf_encoder_zero_points.yaml  reflex_sf_motor_zero_points.yaml  reflex_sf_zero_points.yaml  reflex_takktile.yaml  reflex_takktile2.yaml  reflex_takktile_hand2.yaml  reflex_usb.yaml  right_hand_motor_zero_points.yaml  takktile_cal.yaml  takktile_calibration.yaml  this_is_left_hand.yaml
reflex1_visualizer/: CMakeLists.txt  package.xml  urdf.rviz
reflex1_visualizer/launch/: reflex1_visualizer.launch
reflex1_visualizer/meshes/: base_link.STL
reflex1_visualizer/src/: hand_visualizer.cpp  hand_visualizer.h
reflex1_visualizer/urdf/: full_reflex_model.urdf.xacro  rhr_visualization.URDF
reflex_base/: CMakeLists.txt  package.xml  urdf.rviz
reflex_base/launch/: hardware.launch  motors.launch  reflex.launch  software.launch
reflex_base/src/: do.sh  joints.py  reflex_base.py  reflex_base_services.py  reflex_smarts.py  reflex_tf_broadcaster.cpp  tactile.py
reflex_base/yaml/: reflex.yaml
reflex_driver/: CMakeLists.txt  dump_state_to_console.cpp  hand1_reflex_driver_node.cpp  hand2_reflex_driver_node.cpp  package.xml  reflex_driver.cpp  reflex_driver.h  reflex_driver_node.cpp  reflex_driver_node.h  reflex_hand.cpp  reflex_hand.h  set_radian_positions.py  set_raw_positions.py  two_hand_driver_node.cpp
reflex_driver/launch/: reflex_driver.launch  reflex_driver_hand2.launch  reflex_driver_two_hands.launch  reflex_takktile2_driver.launch  reflex_takktile_driver.launch
reflex_driver/msg/: RadianServoPositions.msg  RawServoPositions.msg
reflex_driver/src/: reflex_driver_node.h  reflex_hand.h
reflex_driver/yaml/: finger_calibrate-c602.yaml  finger_calibrate.yaml  finger_calibrate_hand2.yaml  motor_constants.yaml  tactile_calibrate.yaml  tactile_calibrate_hand2.yaml
reflex_driver2/: CMakeLists.txt  dump_state_to_console.cpp  package.xml  reflex_driver_node.cpp  reflex_driver_node.h
reflex_driver2/launch/: reflex_takktile2_driver.launch  reflex_takktile_driver.launch
reflex_driver2/src/: reflex_driver_node.cpp  reflex_driver_node.h  reflex_hand.cpp  reflex_hand.h
reflex_driver2/yaml/: finger_calibrate.yaml  imu_calibrate.yaml  tactile_calibrate.yaml
reflex_msgs/: CMakeLists.txt  package.xml
reflex_msgs/msg/: Command.msg  Dynamixel.msg  Event.msg  Finger.msg  ForceCommand.msg  Hand.msg  Imu.msg  Motor.msg  MotorDebug.msg  Palm.msg  PoseCommand.msg  RadianServoCommands.msg  RawServoCommands.msg  Rm.msg  StateDebug.msg  TorqueCommand.msg  TorqueServoCommands.msg  TrackState.msg  VelocityCommand.msg
reflex_msgs/srv/: CommandHand.srv  DistalRotation.srv  MoveFinger.srv  MovePreshape.srv
reflex_msgs2/: CMakeLists.txt  package.xml
reflex_one_msgs/: CMakeLists.txt  package.xml
reflex_visualizer/: CMakeLists.txt  package.xml  urdf.rviz
reflex_visualizer/launch/: reflex_visualizer.launch
reflex_visualizer/meshes/: distal_1.STL  distal_pad_1.STL  distal_pad_3.STL  proximal_2.STL  proximal_pad_2.STL  proximal_pad_3.STL
reflex_visualizer/src/: hand_visualizer.cpp  hand_visualizer.h  spoof_rhr_data.py
reflex_visualizer/urdf/: full_reflex_model.urdf.xacro  homemade_marker_portion_urdf  rhr_visualization.URDF
reflex_visualizer2/: CMakeLists.txt  package.xml
reflex_visualizer2/launch/: reflex_visualizer2.launch
reflex_visualizer2/src/: hand_visualizer.cpp  hand_visualizer.h  spoof_rhr_data.py
(+128 files in other folders)
