<?xml version="1.0"?>
<package>
  <name>reflex</name>
  <version>0.0.0</version>
  <description>The main reflex package</description>
  <maintainer email="support@righthandrobotics.com">Right Hand Robotics</maintainer>
  <license>BSD</license>
  <url type="website">www.righthandrobotics.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>reflex_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>reflex_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>